// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors with bad repo or owner 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo: base:1234abcd head\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": 404,
    \\"headers\\": {
      \\"access-control-allow-origin\\": \\"*\\",
      \\"access-control-expose-headers\\": \\"ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, Deprecation, Sunset\\",
      \\"connection\\": \\"close\\",
      \\"content-encoding\\": \\"gzip\\",
      \\"content-security-policy\\": \\"default-src 'none'\\",
      \\"content-type\\": \\"application/json; charset=utf-8\\",
      \\"date\\": \\"Mon, 16 Mar 2020 16:01:26 GMT\\",
      \\"referrer-policy\\": \\"origin-when-cross-origin, strict-origin-when-cross-origin\\",
      \\"server\\": \\"GitHub.com\\",
      \\"status\\": \\"404 Not Found\\",
      \\"strict-transport-security\\": \\"max-age=31536000; includeSubdomains; preload\\",
      \\"transfer-encoding\\": \\"chunked\\",
      \\"vary\\": \\"Accept-Encoding, Accept, X-Requested-With\\",
      \\"x-accepted-oauth-scopes\\": \\"\\",
      \\"x-content-type-options\\": \\"nosniff\\",
      \\"x-frame-options\\": \\"deny\\",
      \\"x-github-media-type\\": \\"github.v3; format=json\\",
      \\"x-github-request-id\\": \\"DEE5:0968:12E96B7:277BAA1:5E6FA2D5\\",
      \\"x-oauth-scopes\\": \\"admin:org, repo\\",
      \\"x-ratelimit-limit\\": \\"5000\\",
      \\"x-ratelimit-remaining\\": \\"4996\\",
      \\"x-ratelimit-reset\\": \\"1584378085\\",
      \\"x-xss-protection\\": \\"1; mode=block\\"
    },
    \\"request\\": {
      \\"method\\": \\"GET\\",
      \\"url\\": \\"https://api.github.com/repos/trilom/cloudformation/compare/1234abcd...85f202fc7f26671f093803a163e3f31b23275887\\",
      \\"headers\\": {
        \\"accept\\": \\"application/vnd.github.v3+json\\",
        \\"user-agent\\": \\"octokit.js/16.43.1 Node.js/12.16.1 (macOS Catalina; x64)\\",
        \\"authorization\\": \\"token [REDACTED]\\"
      },
      \\"request\\": {}
    },
    \\"documentation_url\\": \\"https://developer.github.com/v3/repos/commits/#compare-two-commits\\"
  }
}"
`;

exports[`errors with bad repo or owner pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files \\\\nfor repo: pr error: HttpError: Not Found\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": 404,
    \\"headers\\": {
      \\"access-control-allow-origin\\": \\"*\\",
      \\"access-control-expose-headers\\": \\"ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, Deprecation, Sunset\\",
      \\"connection\\": \\"close\\",
      \\"content-encoding\\": \\"gzip\\",
      \\"content-security-policy\\": \\"default-src 'none'\\",
      \\"content-type\\": \\"application/json; charset=utf-8\\",
      \\"date\\": \\"Mon, 16 Mar 2020 16:01:26 GMT\\",
      \\"referrer-policy\\": \\"origin-when-cross-origin, strict-origin-when-cross-origin\\",
      \\"server\\": \\"GitHub.com\\",
      \\"status\\": \\"404 Not Found\\",
      \\"strict-transport-security\\": \\"max-age=31536000; includeSubdomains; preload\\",
      \\"transfer-encoding\\": \\"chunked\\",
      \\"vary\\": \\"Accept-Encoding, Accept, X-Requested-With\\",
      \\"x-accepted-oauth-scopes\\": \\"repo\\",
      \\"x-content-type-options\\": \\"nosniff\\",
      \\"x-frame-options\\": \\"deny\\",
      \\"x-github-media-type\\": \\"github.v3; format=json\\",
      \\"x-github-request-id\\": \\"DEE6:4A97:9F5D9E:1917DC2:5E6FA2D6\\",
      \\"x-oauth-scopes\\": \\"admin:org, repo\\",
      \\"x-ratelimit-limit\\": \\"5000\\",
      \\"x-ratelimit-remaining\\": \\"4995\\",
      \\"x-ratelimit-reset\\": \\"1584378085\\",
      \\"x-xss-protection\\": \\"1; mode=block\\"
    },
    \\"request\\": {
      \\"method\\": \\"GET\\",
      \\"url\\": \\"https://api.github.com/repos/trilom/cloudformation/pulls/1999/files\\",
      \\"headers\\": {
        \\"accept\\": \\"application/vnd.github.v3+json\\",
        \\"user-agent\\": \\"octokit.js/16.43.1 Node.js/12.16.1 (macOS Catalina; x64)\\",
        \\"authorization\\": \\"token [REDACTED]\\"
      },
      \\"request\\": {}
    },
    \\"documentation_url\\": \\"https://developer.github.com/v3/pulls/#list-pull-requests-files\\"
  }
}"
`;
